Refator to Optional List/Http 404