@@ -12,6 +12,7 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -33,8 +34,8 @@ public class OrderController {
         List<OrderView> orders = this.orderService.findAll()
                 .stream()
                 .map(OrderView::new)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok().body(orders);
+                .toList();
+        return ResponseEntity.of(Optional.of(orders));
     }
 
     @PostMapping("/new")
